fix about me spacing

--- a/src/style.scss
+++ b/src/style.scss
@@ -472,6 +472,10 @@ a {
 }
 
 @media (min-width: 1600px) {
+	.about-container2 {
+		width: 80vw;
+	}
+	
 	.about-more-info {
 		width: 65vw;
 	}
